<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.singlescreenappnano.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="start"
                android:text="@string/mon_fri"
                android:textAlignment="center"
                android:textColor="@color/colorPink"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                android:gravity="start"
                android:text="@string/mon_fri_hours"
                android:textAlignment="center"
                android:textColor="@color/colorPink"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="44dp"
                android:gravity="start"
                android:text="@string/sat_sun"
                android:textAlignment="center"
                android:textColor="@color/colorPink"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="66dp"
                android:gravity="start"
                android:text="@string/sat_sun_hours"
                android:textAlignment="center"
                android:textColor="@color/colorPink"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription=""
                android:scaleType="centerCrop"
                android:src="@drawable/photo1"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearrLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:contentDescription=""
                android:scaleType="centerCrop"
                android:src="@drawable/photo2"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="start"
                android:text="@string/invite_to_our"
                android:textAlignment="center"
                android:textColor="@color/colorPink"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="80dp"
                android:gravity="start"
                android:text="@string/the_best_price"
                android:textAlignment="center"
                android:textColor="@color/colorPink"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/cafe"
        android:textAlignment="center"
        android:textColor="@color/colorPink"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:baselineAlignBottom="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/cafe_name"
        android:textAlignment="center"
        android:textColor="@color/colorPink"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/textView3"
        android:layout_below="@+id/linearrLayout"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>
